// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageFeatures renders correctly as index page 1`] = `
<Page404
  albums={Array []}
  events={Array []}
  isIndexPage={true}
  videos={Array []}
>
  <Component
    id="features"
  >
    <div />
  </Component>
</Page404>
`;

exports[`PageFeatures renders correctly with data 1`] = `
<Page404
  albums={
    Array [
      Object {
        "artist": Object {
          "id": "test",
          "title": "test",
        },
        "imgPath": "test",
        "title": "test",
      },
    ]
  }
  events={
    Array [
      Object {
        "artist": Object {
          "title": "test",
        },
        "date": "2020-06-11 00:00:00",
        "imgPath": "test",
        "title": "test",
      },
    ]
  }
  videos={
    Array [
      Object {
        "artist": Object {
          "title": "test",
        },
      },
    ]
  }
>
  <Component
    id="features"
  >
    <div />
  </Component>
</Page404>
`;

exports[`PageFeatures renders correctly with future date 1`] = `
<Page404
  albums={Array []}
  events={
    Array [
      Object {
        "artist": Object {
          "title": "test",
        },
        "date": "2120-06-11 00:00:00",
        "imgPath": "test",
        "title": "test",
      },
    ]
  }
  videos={Array []}
>
  <Component
    id="features"
  >
    <div />
  </Component>
</Page404>
`;
